--- a/module-1/task-1.4.1.html
+++ b/module-1/task-1.4.1.html
@@ -8,72 +8,29 @@
 <body>
 
   <!-- YOUR CODE GOES BELOW HERE -->
-  
-  CPD - Continuing Professional Development
+
+<h1>CPD - Continuing Professional Development</h1>
 
 
-Date of CPD activity
-12/01/2021
+<h2>Date of CPD activity</h2>
 
-CPD activity
-Introduction to Web Development
+<h2>12/01/2021</h2>
 
-What have I learnt?
+<h3>CPD activity</h3>
+<h3>Introduction to Web Development</h3>
 
-Run throught the course overview
-I have learnt about how the web works, including an overview of Dev Ops
+<h4>What have I learnt?</h4>
 
-
-How did I use this in practice?
-n/a
-
-What did I find hard?
-
-not completely understood the whole process regarding dev ops
+<p>Run throught the course overview
+I have learnt about how the web works, including an overview of Dev Ops</p>
 
 
-Date of CPD activity
-14/01/2021
+<h4>How did I use this in practice?</h4>
+<p>n/a</p>
 
-CPD activity
-Introduction to Web Concepts
+<h4>What did I find hard?</h4>
 
-What have I learnt?
-
-Learnt about hardware and software and the differences between clients and servers
-brief overview of the programming languages
-what a DNS server is, and how IP addresses relate to this
-
-
-How did I use this in practice?
-Watched the Internet Fundamentals video and undertook the practices to reaffirm what was said
-
-What did I find hard?
-
-Generally a better understanding than after the first session, however im sure when we get to lower level items I will have more questions and challenges
-
-Date of CPD activity
-19/01/2021
-
-CPD activity
-Source Control
-
-What have I learnt?
-
-How to use github
-principles behind what a repo is 
-how to ineteract with local and master repos 
-
-How did I use this in practice?
-updated this CPD document and pushed it to the server.
-
-What did I find hard?
-
-A lot of similarities between this and TFS (which i use integrated into my work SQL server environment).
-
-Additional Takeaway
-In the long run this may be a better solution than TFS with the correct integration. with practice this course may help in that too.
-
+<p>not completely understood the whole process regarding dev ops</p>
 
 
   <!-- YOUR CODE GOES ABOVE HERE -->
