--- a/module-2/lesson-1/task-2.1.2.html
+++ b/module-2/lesson-1/task-2.1.2.html
@@ -1,3 +1,18 @@
-  <!-- CODE GOES BELOW HERE -->
+<!DOCTYPE html>
+<html>
+<Head>
+  <title >This shows in the tab</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"></met>
+</Head>
+<body>
+<!-- CODE GOES BELOW HERE -->
+  <h1>Hello world!</h1> 
 
-  <!-- CODE GOES ABOVE HERE -->
+  <p>This is example text showing how <strong>HTML</strong> and <strong>CSS</strong> work together to apply structure and presentation layer to content.</p>
+
+  <p>This content would probably look better if it was a bit more spaced out and if certain key words or phrases were highlighted - <em>maybe by making them a different colour</em>?</p>
+<!-- CODE GOES ABOVE HERE -->
+  
+</body>
+</html>
