--- a/module-2/lesson-1/task-2.1.5.html
+++ b/module-2/lesson-1/task-2.1.5.html
@@ -7,13 +7,20 @@
   <title>task 2.1.5</title>
 </head>
 <body>
-  <img src="https://images.unsplash.com/photo-1603617385189-cee5d82d5032?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="An image of a penguin">
+  <h1>Images with paths</h1>
+  <br>  
+  <h2>Absolute</h2>
   <br>
+  <img src="https://images.pexels.com/photos/668867/pexels-photo-668867.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" Alt="A picture of a brown sea turtle">
   <br>
+  <h2>Relative</h2>
   <br>
+  <img src="../../images/leeds-trinity-logo.png" alt="An image of the Leeds Trinity University logo">
   <br>
-  <a href="https://www.google.com/">
-    <img src="https://images.unsplash.com/photo-1603617385189-cee5d82d5032?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="An image of a penguin">
+  <h2>Absolute with link</h2>
+  <br>
+  <a href="https://www.google.com/" target="_blank">
+    <img src="https://images.pexels.com/photos/3129556/pexels-photo-3129556.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="An image of yellow fishes">
   </a>
   
 
