--- a/module-2/lesson-1/task-2.1.6.html
+++ b/module-2/lesson-1/task-2.1.6.html
@@ -10,18 +10,18 @@
 
   <h2>My daily routine</h2>
   <ol>
-    <li>Have breakfast</li>
-    <li>Have a shower</li>
-    <li>Get dressed</li>
+    <li>Kids sorted for school / nursery</li>
+    <li>Own breakfast / dressed</li>
+    <li>Work</li>
   </ol>
 
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem nulla neque quas vero quod hic provident iste, voluptate nam, quo ullam porro ut sint aperiam obcaecati minus, error nostrum nobis?</p>
 
   <h2>Places I would like to visit</h2>
   <ul>
-    <li><strong>Japan</strong></li>
-    <li>Australia</li>
-    <li>Brazil</li>
+    <li><strong>Australia</strong></li>
+    <li>America</li>
+    <li>Peru</li>
   </ul>
 
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, error recusandae <em>nulla</em>, nemo, asperiores consequatur cum nihil enim ea harum consequuntur laudantium nam. Cumque enim numquam in minima possimus culpa?</p>
