--- a/module-2/lesson-2/task-2.2.2.html
+++ b/module-2/lesson-2/task-2.2.2.html
@@ -8,24 +8,24 @@
 </head>
 <body>
 
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo doloremque beatae vitae consequuntur sapiente aspernatur ex a, unde asperiores tempore accusamus blanditiis, debitis aut. Itaque ratione temporibus distinctio architecto animi.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <em>Quo doloremque beatae vitae consequuntur sapiente aspernatur ex</em> a, unde asperiores tempore accusamus blanditiis, debitis aut. Itaque ratione temporibus distinctio architecto animi.</p>
 
   <a href="https://www.google.com/">Link 1</a>
 
   <ol>
-    <li>item 1</li>
+    <li><strong>item 1</strong></li>
     <li>item 2</li>
     <li>item 3</li>
     <li>item 4</li>
     <li>item 5</li>
   </ol>
 
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates corrupti at ducimus delectus, voluptatibus, aliquam accusantium neque asperiores nesciunt, nobis qui soluta. Voluptate itaque earum accusamus, consequatur ipsa rerum laboriosam?</p>
+  <p><strong>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates corrupti at ducimus delectus, <em>voluptatibus</em>, aliquam accusantium neque asperiores nesciunt, nobis qui soluta. Voluptate itaque earum accusamus, consequatur ipsa rerum laboriosam?</strong></p>
 
   <a href="https://www.google.com/">Link 2</a>
 
   <ul>
-    <li>item 1</li>
+    <li><strong>Item 1</strong></li>
     <li>item 2</li>
     <li>item 3</li>
     <li>item 4</li>
