--- a/module-2/lesson-2/task-2.2.4.html
+++ b/module-2/lesson-2/task-2.2.4.html
@@ -17,6 +17,12 @@
   <h3>heading 3</h3>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates corrupti at ducimus delectus, voluptatibus, aliquam accusantium neque asperiores nesciunt, nobis qui soluta. Voluptate itaque earum accusamus, consequatur ipsa rerum laboriosam?</p>
 
+  <ul>
+    <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+    <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+    <li><strong>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</strong></li>
+    <li><em>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</em></li>
+  </ul>
   <!-- 
   /** TASK 2.2.4 **/
 
