--- a/module-2/lesson-3/task-2.3.4.html
+++ b/module-2/lesson-3/task-2.3.4.html
@@ -11,7 +11,26 @@
 <body>
 
     <!-- ADD YOUR CODE BELOW HERE -->
+    
+    <div class="container">
 
+      <header>
+        <h1>Header</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </header>
+  
+      <main>
+        <h2>Main</h2>
+        <p>Nullam vel odio a leo lacinia commodo.</p>
+      </main>
+  
+      <footer>
+        <h2>Footer</h2>
+        <p>Fusce posuere, orci eu sodales condimentum.</p>
+      </footer>
+
+    </div>
+    
     <!-- ADD YOUR CODE ABOVE HERE -->
 
 </body>
@@ -19,15 +38,10 @@
   /** TASK 2.3.4 **/
  
   1. Add a header, main and footer to your page
-
   2. Add some padding, borders, and margins to our divs.
-
   3. With the instructor we will center the entire document
-
   4. Commit your changes
-
   5. Push your changes to remote
-
  -->
   
 </body>
