--- a/module-2/lesson-4/task-2.4.3.html
+++ b/module-2/lesson-4/task-2.4.3.html
@@ -7,17 +7,16 @@
     <link rel="stylesheet" href="./styles/task-2.4.3.css">
 </head>
 <body>
-
+<div class="wrapper">
     <!-- ADD YOUR CODE BELOW HERE -->
-
+    <div class="relative">Relative</div>
     <!-- ADD YOUR CODE ABOVE HERE -->
-
+  </div>
 </body>
   <!-- 
   /** TASK 2.4.3 **/
  
   1. Create a div with the class of relative
-
   2. Use the following code, and add it to your stylesheet.
     - 
     .relative {
@@ -29,14 +28,9 @@
       background-color: yellow;
       border: 1px solid green;
     }
-
-
   3. Change the left and top to see the div move to its new position.
-
   4. Commit your changes
-
   5. Push your changes to remote
-
  -->
   
 </body>
