--- a/module-2/lesson-4/task-2.4.4.html
+++ b/module-2/lesson-4/task-2.4.4.html
@@ -9,6 +9,10 @@
 <body>
 
     <!-- ADD YOUR CODE BELOW HERE -->
+    <figure class="wrapper">
+        <img src="https://images.pexels.com/photos/5277693/pexels-photo-5277693.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" />
+        <figcaption>Sea turtle staring to surface</figcaption>
+    </figure>
 
     <!-- ADD YOUR CODE ABOVE HERE -->
 
