--- a/chriskehoe_cpd.html
+++ b/chriskehoe_cpd.html
@@ -98,5 +98,100 @@
   
   <p>A lot of similarities between this and TFS (which i use integrated into my work SQL server environment).</p>
   
+
+  <h2>Module 2.1</h2>
+  <h2>Date of CPD activity</h2>
+  <h2>26/01/2021</h2>
+  
+  <h3>CPD activity</h4>
+  <h3>HTML</h3>
+  
+  <h4>What have I learnt?</h3>
+  
+  <p>Understanding of the anatony of a website, what an element is, elemental nesting and orders, links and list items </p>
+  
+  
+  <h4>How did I use this in practice?</h4>
+  <p>Tasks to update html fiies, create links, open in new windows, email link</p>
+  
+  <h4>What did I find hard?</h4>
+  
+  <p>remembering to move tag/element closes if they are automatically generated and not duplicating</p>
+  
+  <h2>Module 2.2</h2>
+  <h2>Date of CPD activity</h2>
+  <h2>28/01/2021</h2>
+  
+  <h3>CPD activity</h4>
+  <h3>Intoduction to CSS</h3>
+  
+  <h4>What have I learnt?</h3>
+  
+  <p>CSS is Cascading Style Sheets, develops styles for your page including fonts, box sizes, borders etc and that these can be applied to the entire body of the page, or targeted to specific elements
+    CSS is a clock with the selector (specifies what is being targeted), what the property is and that property value eg bachground -color: blue for a div element.
+    how CSS interacts with html (inline - in the tags or elements, embedded - in the html head and linked or external - CSS file)
+  </p>
+  
+  
+  <h4>How did I use this in practice?</h4>
+  <p>Tasks to colour specific html elements including strong tag, font size changes, working with nested elements to show the specificity of the selector eg main p {} </p>
+  
+  <h4>What did I find hard?</h4>
+  
+  <p>specificity order (and saying specificity)</p>
+  
+  <h2>Module 2.3</h2>
+  <h2>Date of CPD activity</h2>
+  <h2>02/02/2021</h2>
+  
+  <h3>CPD activity</h4>
+  <h3>More html and CSS</h3>
+  
+  <h4>What have I learnt?</h3>
+  
+  <p>block and inline elements, blcok creates new line, inline do not (ed img, strong)
+    html 5 has more descriptive elements other than div for creating a container, eg header, main, section, footer
+    what psuedo classes are, and how they can be used to interact with links colours and sizes
+    box model
+  </p>
+  
+  
+  <h4>How did I use this in practice?</h4>
+  <p>html file to use other elements and spans
+    Pseudo classes to highligh links in various colors etc
+  </p>
+  
+  <h4>What did I find hard?</h4>
+  
+  <p></p>
+  
+  <h2>Module 2.4</h2>
+  <h2>Date of CPD activity</h2>
+  <h2>04/02/2021</h2>
+  
+  <h3>CPD activity</h4>
+  <h3>Version Control</h3>
+  
+  <h4>What have I learnt?</h3>
+  
+  <p>understanding branches, origin, upstream and downstream</h4>
+  working in isolation and as a collabaration on a project
+  creating and removing branches
+  using live server to view document during development</p>
+  
+  
+  <h4>How did I use this in practice?</h4>
+  <p>updated this CPD document, html tag, live server viewing and pushed it to the server.</p>
+  
+  <h4>What did I find hard?</h4>
+  
+  <p>A lot of similarities between this and TFS (which i use integrated into my work SQL server environment).</p>
+  
+
+
+
+
+
+
 </body>
 </html>
