--- a/module-2/lesson-4/task-2.4.5.html
+++ b/module-2/lesson-4/task-2.4.5.html
@@ -9,7 +9,38 @@
 <body>
 
     <!-- ADD YOUR CODE BELOW HERE -->
+    <header>
+      <div class="logo"> <img src="https://images.pexels.com/photos/705314/pexels-photo-705314.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"></div>
+      <nav>
+         <ul>
+           <li>Home</li>
+           <li>About</li>
+           <li>Contact Us</li>
+         </ul>
+       </nav>
+    </header>
+    <div class="clearfix"></div>
 
+    <main>
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum neque velit, quae officiis, ex perspiciatis laudantium numquam doloremque sequi possimus atque tempore iusto beatae consequuntur, pariatur voluptatibus sit placeat facere. </p>
+      <img align="left" src="https://images.pexels.com/photos/349758/hummingbird-bird-birds-349758.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" >
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nulla pariatur eum nostrum soluta omnis dolorem at qui eos velit quia quas, porro eaque vero incidunt, aut ab veritatis illo. </p>
+      <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo neque voluptatibus harum, officia exercitationem delectus. </p>
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores autem eveniet temporibus eaque accusamus dolorum non aperiam ipsa. Aspernatur libero voluptatibus earum aut quidem tenetur excepturi, vero beatae ad! Ipsa. </p>
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum neque velit, quae officiis, ex perspiciatis laudantium numquam doloremque sequi possimus atque tempore iusto beatae consequuntur, pariatur voluptatibus sit placeat facere. </p>
+
+
+
+    </main>
+    <aside> 
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, labore. Ratione, ut nesciunt saepe distinctio quod delectus aliquid beatae est vel odit voluptate molestias incidunt suscipit eos, repellat ad consequatur earum eum culpa alias facere labore dicta. Quis reiciendis quaerat beatae commodi et, hic doloribus architecto necessitatibus earum pariatur corporis.</p>
+      
+      <p> test
+        
+      </p>
+    </aside>
+    <!-- <div class="clearfix"></div> -->
+    <footer>&copy; 2021 </footer>
     <!-- ADD YOUR CODE ABOVE HERE -->
 
 </body>
