--- a/module-3/lesson-4/task-3.4.1.html
+++ b/module-3/lesson-4/task-3.4.1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Task 3.4.1</title>
   <!-- ADD YOUR LINK TO YOUR STYLESHEET BELOW HERE -->
-  
+  <script src="Scripts/task-3.4.1.js"></script>
   <!-- DONT FORGET TO CREATE YOUR STYLESHEET IN YOUR STYLES FOLDER  -->
 
   <!-- ADD YOUR LINK TO YOUR STYLESHEET ABOVE HERE -->
