--- a/module-3/lesson-4/task-3.4.5.html
+++ b/module-3/lesson-4/task-3.4.5.html
@@ -7,7 +7,7 @@
   <!-- ADD YOUR LINK TO YOUR STYLESHEET BELOW HERE -->
   
   <!-- DONT FORGET TO CREATE YOUR STYLESHEET IN YOUR STYLES FOLDER  -->
-
+  <script src="./Scripts/task-3.4.5.js"></script>
   <!-- ADD YOUR LINK TO YOUR STYLESHEET ABOVE HERE -->
 </head>
 <body>
