--- a/module-3/lesson-5/task-3.5.1.html
+++ b/module-3/lesson-5/task-3.5.1.html
@@ -5,18 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Task 3.5.1</title>
   <!-- ADD YOUR LINK TO YOUR STYLESHEET BELOW HERE -->
-  
+  <link rel="stylesheet" href="./styles/task-3.5.1.css">
   <!-- DONT FORGET TO CREATE YOUR STYLESHEET IN YOUR STYLES FOLDER  -->
 
   <!-- ADD YOUR LINK TO YOUR STYLESHEET ABOVE HERE -->
 </head>
 <body>
-
-
 <script src="./scripts/shoppingCart.js"></script>
 
+
 <!-- ADD YOUR LINK TO YOUR JAVASCRIPT BELOW HERE -->
-  
+  <script src="./scripts/task-3.5.1.js"></script>  
 <!-- DONT FORGET TO CREATE YOUR JAVASCRIPT FILE IN YOUR SCRIPTS FOLDER  -->
 
 <!-- ADD YOUR LINK TO YOUR JAVASCRIPT  ABOVE HERE -->
