--- a/module-3/lesson-6/task-3.6.3.html
+++ b/module-3/lesson-6/task-3.6.3.html
@@ -7,8 +7,9 @@
 </head>
 <body>
   
+<button>Mouse over</button>
   <!-- ADD YOUR CODE BELOW HERE -->
-
+<script src="./scripts/task-3.6.3.js"></script>
   <!-- ADD YOUR CODE ABOVE HERE -->
   
 </body>
