--- a/module-3/lesson-6/task-3.6.4.html
+++ b/module-3/lesson-6/task-3.6.4.html
@@ -7,8 +7,9 @@
 </head>
 <body>
   
+  <a href='https://google.co.uk'>google homepage</a>
   <!-- ADD YOUR CODE BELOW HERE -->
-
+<script src="./scripts/task-3.6.4.js"></script>
   <!-- ADD YOUR CODE ABOVE HERE -->
   
 </body>
