--- a/module-3/lesson-7/task-3.7.1.html
+++ b/module-3/lesson-7/task-3.7.1.html
@@ -4,8 +4,56 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Task 3.7.1</title>
+  <link rel="stylesheet" href="./styles/task-3.7.1.css">
 </head>
 <body>
-  
+  <header>
+    <h1>Using JS to Filter</h1>
+    <div class="selection-container">
+      <button class="selection active"  data-class="all">All Sports</button>
+      <button class="selection" data-class="football">Football</button>
+      <button class="selection" data-class="rugby">Rugby</button>
+      <button class="selection" data-class="icehockey">Ice Hockey</button>
+      <button class="selection" data-class="amfootball">American Football</button>
+
+    </div>
+  </header>   <!-- end of the header section -->
+
+  <main>
+    <div class="image-selections">
+      <div class="images" data-class="football">
+        <img src="https://www.yorkshireeveningpost.co.uk/webimg/QVNIMTE2MjIzNjg3.jpg" alt="">
+        <!--<img src="https://images.pexels.com/photos/5609026/pexels-photo-5609026.jpeg" alt="">-->
+        <!--<img src="https://images.pexels.com/photos/4019598/pexels-photo-4019598.jpeg" alt="">-->
+        <!--<img src="" alt="">-->
+        
+      </div>
+      <div class="images" data-class="rugby">
+        <img src="https://images.pexels.com/photos/3645005/pexels-photo-3645005.jpeg" alt="">
+        <!--<img src="" alt="">-->
+        <!--<img src="" alt="">-->
+        <!--<img src="" alt="">-->
+      </div>
+      <div class="images" data-class="icehockey">
+        <img src="https://images.pexels.com/photos/2088323/pexels-photo-2088323.jpeg" alt="">
+        <!--<img src="" alt="">-->
+        <!--<img src="" alt="">-->
+        <!--<img src="" alt="">-->
+      </div>
+      <div class="images"  data-class="amfootball">
+        <img src="https://images.pexels.com/photos/718952/pexels-photo-718952.jpeg" alt="">
+        <!--<img src="" alt="">-->
+        <!--<img src="" alt="">-->
+        <!--<img src="" alt="">-->
+      </div>
+
+
+    </div><!--end of image-selections-->
+
+  </main><!--end of main section-->
+
+
+  <!--attach js below here  -->
+  <script src="./scripts/task-3.7.1.js"></script>
 </body>
 </html>
